[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/caida_procedural/scenes/level_generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/caida_procedural/scripts/level_configurator.gd" type="Script" id=2]
[ext_resource path="res://src/caida_procedural/scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/cameras/ShakeCamera2D.tscn" type="PackedScene" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect2" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStartPoint" type="Position2D" parent="."]
position = Vector2( 273, -128 )
__meta__ = {
"_edit_group_": true
}

[node name="ShakeCamera2D" parent="PlayerStartPoint" instance=ExtResource( 4 )]
zoom = Vector2( 0.5, 0.5 )
limit_left = 64
limit_top = 0
limit_right = 588
editor_draw_limits = false
lock_x = true

[node name="LevelGenerator" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 0 )
